# kyma-companion

./: Dockerfile  Makefile  pyproject.toml
src/: main.py
