[tool.poetry]
name = "kyma-companion"
version = "0.1.0"
description = "Kyma Companion is AI Kyma assistant that helps you to manage your Kyma runtime"
authors = [
    "Muhammad Faizan m.faizan@sap.com",
    "Aleksei Chernyshov aleksei.chernyshov@sap.com",
    "Carina Kothe carina.kothe@sap.com",
    "Friedrich Wilken jens.wilken@sap.com",
    "Tibor Kiss tibor.kiss01@sap.com",
    "Marco Bebway marco.bebway@sap.com",
    "Piotr Bochynski piotr.bochynski@sap.com",
    "Mansur Uralov m.uralov@sap.com",
]
readme = "README.md"
packages = [{ include = "src" }]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# Add your production dependencies here
fastapi = "^0.111.0"
pytest = "^8.2.2"
langchain-community = "^0.2.6"
hdbcli = "^2.21.26"
requests = "2.32.3"
cachetools = "5.3.3"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
google-auth = "2.30.0"
idna = "3.7"
kubernetes = "30.1.0"
oauthlib = "3.2.2"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.1"
requests-oauthlib = "2.0.0"
rsa = "4.9"
six = "1.16.0"
urllib3 = "2.2.1"
websocket-client = "1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"

[tool.poetry.group.dev.dependencies]
ruff = "v0.4.10"
flake8-bugbear = "^24.4.26"
poethepoet = "^0.27.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
pythonpath = [
    "src"
]
testpaths = [
    "tests",
]

[tool.poe.tasks]
lint = "ruff check ."
test = "pytest tests"
run = "fastapi run src/main.py --port 8000"
run-local = "fastapi dev src/main.py --port 8000"
